--- a/index.html
+++ b/index.html
@@ -16,8 +16,36 @@
       font-family: system-ui, sans-serif;
     }
   </style>
+  nav {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  display: flex;
+  gap: 16px;
+}
+
+nav a {
+  color: #eaeaea;
+  text-decoration: none;
+  font-size: 14px;
+  opacity: 0.7;
+}
+
+nav a:hover {
+  opacity: 1;
+}
+
+.home {
+  font-size: 18px;
+}
 </head>
 <body>
+  <nav>
+  <a href="index.html" class="home">🏠</a>
+  <a href="about.html">About</a>
+  <a href="projects.html">Projects</a>
+  <a href="contact.html">Contact</a>
+</nav>
   <h1>ahsome.</h1>
 </body>
 </html>
