--- a/index.html
+++ b/index.html
@@ -41,11 +41,8 @@
   </style>
 </head>
 <body>
-  <nav>
+  <nav class="home-only">
     <a href="index.html" class="home">🏠</a>
-    <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
   </nav>
 
   <h1>ahsome.</h1>
