--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
   <title>ahsome</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    .toc {
+  list-style: none;
+  padding: 0;
+  margin-top: 24px;
+  text-align: center;
+}
+
+.toc li {
+  margin: 8px 0;
+}
+
+.toc a {
+  color: #eaeaea;
+  text-decoration: none;
+  opacity: 0.6;
+}
+
+.toc a:hover {
+  opacity: 1;
+}
+    
     body {
       margin: 0;
       height: 100vh;
@@ -45,6 +66,12 @@
     <a href="index.html" class="home">🏠</a>
   </nav>
 
-  <h1>ahsome.</h1>
+  <h1>ahsome.
+  <ul class="toc">
+  <li><a href="about.html">About</a></li>
+  <li><a href="projects.html">Projects</a></li>
+  <li><a href="contact.html">Contact</a></li>
+</ul>
+  </h1>
 </body>
 </html>
