--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
   <nav class="home-only">
-    <a href="index.html" class="home">🏠</a>
+    <a href="index.html" class="home">Schreibtisch</a>
   </nav>
 
   <h1>ahsome.
