--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
   padding: 0;
   margin-top: 24px;
   text-align: center;
+  opacity: 0;
+  transform: translateY(10px);
+  animation: fadeIn 0.8s ease forwards;
+  animation-delay: 0.3s;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+    .toc {
+  list-style: none;
+  padding: 0;
+  margin-top: 24px;
+  text-align: center;
 }
 
 .toc li {
