--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <h1>ahsome.
   <ul class="toc">
-  <li><a href="about.html">About</a></li>
+  <li><a href="Statistik.html">Statistik</a></li>
   <li><a href="projects.html">Projects</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
