--- a/Statistik.html
+++ b/Statistik.html
@@ -16,7 +16,9 @@
   <nav class="home-only">
     <a href="index.html" class="home">Schreibtisch</a>
   </nav>
-
+<ul>
+  <li><a href="statistik/skript.html">Statistik Skript</a></li>
+</ul>
   <main>
     <h1>Statistik</h1>
   </main>
