--- a/Statistik.html
+++ b/Statistik.html
@@ -17,7 +17,7 @@
     <a href="index.html" class="home">Schreibtisch</a>
   </nav>
 <ul>
-  <li><a href="statistik/skript.html">Statistik Skript</a></li>
+  <li><a href="Statistik/Allgemeines.html">Allgemeines</a></li>
 </ul>
   <main>
     <h1>Statistik</h1>
