--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
   <h1>ahsome.
   <ul class="toc">
   <li><a href="Statistik.html">Statistik</a></li>
-  <li><a href="projects.html">Projects</a></li>
-  <li><a href="contact.html">Contact</a></li>
+  <li><a href="projects.html">Messtechnik</a></li>
+  <li><a href="contact.html">Elektrotechnik</a></li>
 </ul>
   </h1>
 </body>
