--- a/Statistik.html
+++ b/Statistik.html
@@ -16,11 +16,12 @@
   <nav class="home-only">
     <a href="index.html" class="home">Schreibtisch</a>
   </nav>
-<ul>
-  <li><a href="Statistik/Allgemeines.html">Allgemeines</a></li>
-</ul>
   <main>
     <h1>Statistik</h1>
+
+    <ul class="toc">
+  <li><a href="Statistik/Allgemeines.html">Allgemeines</a></li>
+</ul>
   </main>
 </body>
 </html>
