--- a/Statistik.html
+++ b/Statistik.html
@@ -9,7 +9,13 @@
     .home-only { position: fixed; top: 20px; left: 20px; }
     .home { color:#eaeaea; text-decoration:none; font-size:18px; opacity:.7; }
     .home:hover { opacity:1; }
-    main { min-height:100vh; display:flex; align-items:center; justify-content:center; padding:40px; }
+    main {
+  min-height: 100vh;
+  display: block;
+  padding: 80px 40px;
+  max-width: 700px;
+  margin: 0 auto;
+}
   </style>
 </head>
 <body>
