--- a/index.html
+++ b/index.html
@@ -5,77 +5,80 @@
   <title>ahsome</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    .toc {
-  list-style: none;
-  padding: 0;
-  margin-top: 24px;
-  text-align: center;
-  opacity: 0;
-  transform: translateY(10px);
-  animation: fadeIn 0.8s ease forwards;
-  animation-delay: 0.3s;
+   :root{
+  --bg:#050a06;
+  --g1:#00ff66;
+  --g2:#00cc55;
+  --g3:#00ff99;
 }
 
-@keyframes fadeIn {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-    .toc {
-  list-style: none;
-  padding: 0;
-  margin-top: 24px;
-  text-align: center;
+body{
+  margin:0;
+  min-height:100vh;
+  background: radial-gradient(1200px 800px at 50% 40%, #07140b 0%, var(--bg) 60%, #000 100%);
+  color: var(--g1);
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
 
-.toc li {
-  margin: 8px 0;
+h1{
+  font-weight:600;
+  letter-spacing:0.08em;
+  text-shadow: 0 0 10px rgba(0,255,102,.35), 0 0 24px rgba(0,255,102,.18);
 }
 
-.toc a {
-  color: #eaeaea;
-  text-decoration: none;
-  opacity: 0.6;
+a{
+  color: var(--g3);
+  text-decoration:none;
 }
 
-.toc a:hover {
-  opacity: 1;
+a:hover{
+  text-shadow: 0 0 10px rgba(0,255,153,.35);
 }
-    
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #0e0e0e;
-      color: #eaeaea;
-      font-family: system-ui, sans-serif;
-    }
 
-    nav {
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      display: flex;
-      gap: 16px;
-    }
+/* Home-Button */
+.home-only{
+  position:fixed;
+  top:20px;
+  left:20px;
+}
 
-    nav a {
-      color: #eaeaea;
-      text-decoration: none;
-      font-size: 14px;
-      opacity: 0.7;
-    }
+.home{
+  color: var(--g1);
+  font-size:18px;
+  opacity:.85;
+}
+.home:hover{ opacity:1; }
 
-    nav a:hover {
-      opacity: 1;
-    }
+/* TOC */
+.toc{
+  margin-top:18px;
+  text-align:center;
+  opacity:.9;
+}
 
-    .home {
-      font-size: 18px;
-    }
+.toc-label{
+  font-size:12px;
+  letter-spacing:0.18em;
+  text-transform:uppercase;
+  color: var(--g2);
+  opacity:.8;
+}
+
+.toc ul{ list-style:none; padding:0; margin:10px 0 0 0; }
+.toc li{ margin:8px 0; }
+
+.toc a{
+  color: var(--g3);
+  font-size:14px;
+  opacity:.9;
+}
+.toc a:hover{
+  opacity:1;
+  text-shadow: 0 0 10px rgba(0,255,153,.35);
+}
   </style>
 </head>
 <body>
