Update and rename Statistik.html to statistik.html

--- a/statistik.html
+++ b/statistik.html
@@ -89,7 +89,9 @@ a:hover{
     <h1>Statistik</h1>
 
     <ul class="toc">
-  <li><a href="Statistik/Allgemeines.html">Allgemeines</a></li>
+    <li>
+    <a href="statistik/allgemeines.html">Allgemeines</a>
+    <li>
 </ul>
   </main>
 </body>
