--- a/statistik.html
+++ b/statistik.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>About</title>
+  <title>Statistik</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     :root{
