--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ a:hover{
 
   <h1>ahsome.
   <ul class="toc">
-  <li><a href="Statistik.html">Statistik</a></li>
+  <li><a href="statistik.html">Statistik</a></li>
   <li><a href="projects.html">Messtechnik</a></li>
   <li><a href="contact.html">Elektrotechnik</a></li>
 </ul>
