--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 }
 
 body{
+  <canvas id="rain"></canvas>
   margin:0;
   min-height:100vh;
   background: radial-gradient(1200px 800px at 50% 40%, #07140b 0%, var(--bg) 60%, #000 100%);
@@ -79,6 +80,20 @@ a:hover{
   opacity:1;
   text-shadow: 0 0 10px rgba(0,255,153,.35);
 }
+    #rain{
+  position:fixed;
+  inset:0;
+  width:100%;
+  height:100%;
+  z-index:0;
+  opacity:0.28;
+  pointer-events:none;
+}
+
+main, nav{
+  position:relative;
+  z-index:1;
+}
   </style>
 </head>
 <body>
@@ -93,5 +108,47 @@ a:hover{
   <li><a href="contact.html">Elektrotechnik</a></li>
 </ul>
   </h1>
+  <script>
+  const canvas = document.getElementById("rain");
+  const ctx = canvas.getContext("2d");
+
+  const chars = "アイウエオカキクケコサシスセソタチツテトナニヌネノ0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+  let w, h, cols, drops, fontSize = 16;
+
+  function resize(){
+    w = canvas.width = window.innerWidth * devicePixelRatio;
+    h = canvas.height = window.innerHeight * devicePixelRatio;
+    ctx.setTransform(devicePixelRatio,0,0,devicePixelRatio,0,0);
+
+    cols = Math.floor(window.innerWidth / fontSize);
+    drops = Array(cols).fill(0).map(() => Math.random() * window.innerHeight / fontSize);
+  }
+
+  function draw(){
+    ctx.fillStyle = "rgba(0,0,0,0.08)";
+    ctx.fillRect(0,0,window.innerWidth,window.innerHeight);
+
+    for(let i=0;i<drops.length;i++){
+      const text = chars[Math.floor(Math.random()*chars.length)];
+      const x = i * fontSize;
+      const y = drops[i] * fontSize;
+
+      ctx.fillStyle = (Math.random() < 0.02) ? "#b6ffcc" : "#00ff66";
+      ctx.fillText(text, x, y);
+
+      if(y > window.innerHeight && Math.random() > 0.975) drops[i] = 0;
+      drops[i]++;
+    }
+    requestAnimationFrame(draw);
+  }
+
+  resize();
+  ctx.font = fontSize + "px ui-monospace, Menlo, monospace";
+  window.addEventListener("resize", () => {
+    resize();
+    ctx.font = fontSize + "px ui-monospace, Menlo, monospace";
+  });
+  draw();
+</script>
 </body>
 </html>
