--- a/elektrotechnik/elektrotechnik.html
+++ b/elektrotechnik/elektrotechnik.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Allgemeines zur Statistik</title>
+  <title>Elektrotechnik</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
 
@@ -88,18 +88,34 @@ a:hover{
 </head>
 <body>
   <nav class="home-only">
-  <a href="../statistik.html" class="home">← Statistik</a>
+  <a href="../index.html" class="home">← Schreibtisch</a>
 </nav>
 
   <main>
-  <h1>Statistik – Allgemeines</h1>
+  <h1>Elektrotechnik</h1>
 
-  <h2>Evidenzbasiertes Handeln</h2>
+  <h2>Einordnung</h2>
   <p>
-    Wichtige Entscheidungen sollen den Stand der verfügbaren
-    wissenschaftlichen Evidenz berücksichtigen und nicht allein
-    aufgrund Erfahrung und subjektiver Einschätzungen getroffen
-    werden.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+    Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  </p>
+
+  <h2>Grundbegriffe</h2>
+  <p>
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+    nisi ut aliquip ex ea commodo consequat.
+  </p>
+
+  <h3>Beispiel</h3>
+  <ul>
+    <li>Lorem ipsum dolor</li>
+    <li>Sit amet consectetur</li>
+    <li>Adipiscing elit</li>
+  </ul>
+
+  <p>
+    Duis aute irure dolor in reprehenderit in voluptate velit esse 
+    cillum dolore eu fugiat nulla pariatur.
   </p>
   </main>
 </body>
