--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
 
     <ul class="toc">
       <li><a href="statistik.html">Statistik</a></li>
-      <li><a href="projects.html">Messtechnik</a></li>
-      <li><a href="contact.html">Elektrotechnik</a></li>
+      <li><a href="elektrotechnik/elektrotechnik.html">Elektrotechnik</a></li>
     </ul>
   </div>
 
