--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -94,12 +94,17 @@ a:hover{
   <main>
   <h1>Statistik – Allgemeines</h1>
 
-  <h2>Evidenzbasiertes Handeln</h2>
+  <h2>Einordnung</h2>
   <p>
     Wichtige Entscheidungen sollen den Stand der verfügbaren
     wissenschaftlichen Evidenz berücksichtigen und nicht allein
     aufgrund Erfahrung und subjektiver Einschätzungen getroffen
     werden.
+  </p>
+
+  <h2>Grundbegriffe</h2>
+  <p>
+    Internale Validität ist für externale Validität eine notwendige, aber keine hinreichende Bedingung.
   </p>
   </main>
 </body>
