--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -92,9 +92,11 @@ a:hover{
 </nav>
 
   <main>
+
+
   <h1>Statistik – Allgemeines</h1>
 
-  <h2>Einordnung</h2>
+  <h2>Evidenzbasiertes Handeln</h2>
   <p>
     Wichtige Entscheidungen sollen den Stand der verfügbaren
     wissenschaftlichen Evidenz berücksichtigen und nicht allein
@@ -102,9 +104,22 @@ a:hover{
     werden.
   </p>
 
+
+  <h2>Wissenschaftliche Gütekriterien</h2>
+  <p>
+    <li>Reliabilität</li>
+
+    <li>Internale Validität</li>
+    Können berichtete Effekte eindeutig auf die Untersuchungsbedingungen 
+    zurückgeführt werden? Gibt es Alternativerklärungen?  
+    -> Laborstudien, Experimente, RCTs
+  </p>
+  
+
   <h2>Grundbegriffe</h2>
   <p>
-    Internale Validität ist für externale Validität eine notwendige, aber keine hinreichende Bedingung.
+    Internale Validität ist für externale Validität eine notwendige, 
+    aber keine hinreichende Bedingung.
   </p>
   </main>
 </body>
