wiki inhalt ändern

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -153,7 +153,7 @@
     <h2>Evidenzbasiertes Handeln</h2>
     <p>
       Wichtige Entscheidungen sollen den Stand der verfügbaren
-      wissenschaftlichen Evidenz berücksichtigen und nicht allein
+      wissenschaftlichen Evidenz berücksichtigen. Sie sollen nicht allein
       aufgrund Erfahrung und subjektiver Einschätzungen getroffen
       werden.
     </p>
