Style definition list

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -76,6 +76,26 @@
       margin: 6px 0;
       opacity: .95;
     }
+    dl{
+      margin: 12px 0 16px 0;
+      padding: 10px 12px;
+      border-left: 2px solid rgba(0,255,102,.45);
+      background: rgba(0,0,0,.18);
+      box-shadow: inset 0 0 18px rgba(0,255,102,.08);
+      border-radius: 8px;
+    }
+    dt{
+      font-weight: 600;
+      letter-spacing: 0.02em;
+      margin-top: 8px;
+      color: var(--g3);
+      text-shadow: 0 0 10px rgba(0,255,153,.18);
+    }
+    dt:first-of-type{ margin-top: 0; }
+    dd{
+      margin: 4px 0 8px 16px;
+      opacity: .9;
+    }
     p{
       opacity: .9;
     }
@@ -159,6 +179,16 @@
     </p>
 
     <h2>Wissenschaftliche Gütekriterien</h2>
+
+
+    <dl>
+  <dt>Internale Validität</dt>
+  <dd>Freiheit von Störvariablen.</dd>
+
+  <dt>Reliabilität</dt>
+  <dd>Zuverlässigkeit der Messung.</dd>
+</dl>
+
 
     <ul>
       <li>Reliabilität</li>
