Add wiki bookmarks and fix back button

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     .toc a{ font-size:14px; opacity:.9; }
     .toc a:hover{ opacity:1; }
   </style>
+  <link rel="stylesheet" href="bookmarks.css">
 </head>
 <body>
 
@@ -144,5 +145,6 @@
     window.addEventListener("resize", resize);
     draw();
   </script>
+  <script src="bookmarks.js"></script>
 </body>
 </html>
