--- a/statistik.html
+++ b/statistik.html
@@ -80,6 +80,7 @@ a:hover{
   text-shadow: 0 0 10px rgba(0,255,153,.35);
 }
   </style>
+  <link rel="stylesheet" href="bookmarks.css">
 </head>
 <body>
   <nav class="home-only">
@@ -94,5 +95,6 @@ a:hover{
     <li>
 </ul>
   </main>
+  <script src="bookmarks.js"></script>
 </body>
 </html>
