--- a/elektrotechnik/elektrotechnik.html
+++ b/elektrotechnik/elektrotechnik.html
@@ -85,6 +85,7 @@ a:hover{
   text-shadow: 0 0 10px rgba(0,255,153,.35);
 }
   </style>
+  <link rel="stylesheet" href="../bookmarks.css">
 </head>
 <body>
   <nav class="home-only">
@@ -118,5 +119,6 @@ a:hover{
     cillum dolore eu fugiat nulla pariatur.
   </p>
   </main>
+  <script src="../bookmarks.js"></script>
 </body>
 </html>
