Fix search and add TOC panel

--- a/elektrotechnik/elektrotechnik.html
+++ b/elektrotechnik/elektrotechnik.html
@@ -87,6 +87,7 @@ a:hover{
   </style>
   <link rel="stylesheet" href="../bookmarks.css">
   <link rel="stylesheet" href="../search.css">
+  <link rel="stylesheet" href="../toc.css">
 </head>
 <body>
   <nav class="home-only">
@@ -139,5 +140,6 @@ a:hover{
   </main>
   <script src="../bookmarks.js"></script>
   <script src="../search.js"></script>
+  <script src="../toc.js"></script>
 </body>
 </html>
