--- a/statistik.html
+++ b/statistik.html
@@ -82,6 +82,7 @@ a:hover{
   </style>
   <link rel="stylesheet" href="bookmarks.css">
   <link rel="stylesheet" href="search.css">
+  <link rel="stylesheet" href="toc.css">
 </head>
 <body>
   <nav class="home-only">
@@ -114,5 +115,6 @@ a:hover{
   </main>
   <script src="bookmarks.js"></script>
   <script src="search.js"></script>
+  <script src="toc.js"></script>
 </body>
 </html>
