--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -177,6 +177,7 @@
   </style>
   <link rel="stylesheet" href="../bookmarks.css">
   <link rel="stylesheet" href="../search.css">
+  <link rel="stylesheet" href="../toc.css">
 </head>
 <body>
   <nav class="home-only">
@@ -305,5 +306,6 @@
   </script>
   <script src="../bookmarks.js"></script>
   <script src="../search.js"></script>
+  <script src="../toc.js"></script>
 </body>
 </html>
