--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
   </style>
   <link rel="stylesheet" href="bookmarks.css">
   <link rel="stylesheet" href="search.css">
+  <link rel="stylesheet" href="toc.css">
 </head>
 <body>
 
@@ -165,5 +166,6 @@
   </script>
   <script src="bookmarks.js"></script>
   <script src="search.js"></script>
+  <script src="toc.js"></script>
 </body>
 </html>
