--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </div>
 
   <div class="content">
-    <h1>ahsome.</h1>
+    <h1>git get.</h1>
 
     <ul class="toc">
       <li><a href="statistik.html">Statistik</a></li>
