Add music button and ignore .DS_Store

--- a/elektrotechnik/elektrotechnik.html
+++ b/elektrotechnik/elektrotechnik.html
@@ -88,6 +88,7 @@ a:hover{
   <link rel="stylesheet" href="../bookmarks.css">
   <link rel="stylesheet" href="../search.css">
   <link rel="stylesheet" href="../toc.css">
+  <link rel="stylesheet" href="../music.css">
 </head>
 <body>
   <nav class="home-only">
@@ -109,6 +110,14 @@ a:hover{
       <ul class="search-results"></ul>
       <div class="search-empty">Keine Treffer.</div>
     </div>
+  </div>
+
+  <div class="music-shell" data-audio="/audio/matrix.wav">
+    <button class="music-button" type="button" aria-label="Musik">
+      <svg class="music-icon" viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M19 3v12.5a3.5 3.5 0 1 1-2-3.16V6.6l-8 1.7v8.2a3.5 3.5 0 1 1-2-3.16V4.5L19 3z"></path>
+      </svg>
+    </button>
   </div>
 
   <main>
@@ -141,5 +150,6 @@ a:hover{
   <script src="../bookmarks.js"></script>
   <script src="../search.js"></script>
   <script src="../toc.js"></script>
+  <script src="../music.js"></script>
 </body>
 </html>
